--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Bars/ChangesBar/PhotoEditChangesBar.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Bars/ChangesBar/PhotoEditChangesBar.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,7 +25,7 @@
                     <constraints>
                         <constraint firstAttribute="width" secondItem="q0o-eO-qRu" secondAttribute="height" multiplier="1:1" id="K2t-rN-b4K"/>
                     </constraints>
-                    <state key="normal" image="photo_edit_cancel"/>
+                    <state key="normal" image="iconCancelBorder"/>
                     <connections>
                         <action selector="onCancel:" destination="iN0-l3-epB" eventType="touchUpInside" id="Axz-ZG-2bs"/>
                     </connections>
@@ -35,12 +35,13 @@
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Vl5-HS-uTa" secondAttribute="height" multiplier="1:1" id="6cn-9o-aJB"/>
                     </constraints>
-                    <state key="normal" image="photo_edit_apply"/>
+                    <state key="normal" image="iconSelect"/>
                     <connections>
                         <action selector="onApply:" destination="iN0-l3-epB" eventType="touchUpInside" id="HF7-H6-bn9"/>
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Vl5-HS-uTa" secondAttribute="trailing" id="3Ud-7j-iMc"/>
@@ -55,7 +56,6 @@
                 <constraint firstItem="Vl5-HS-uTa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="yys-3S-QIT"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="applyButton" destination="Vl5-HS-uTa" id="24W-72-0JT"/>
                 <outlet property="cancelButton" destination="q0o-eO-qRu" id="kk9-du-lVX"/>
@@ -65,7 +65,7 @@
         </view>
     </objects>
     <resources>
-        <image name="photo_edit_apply" width="20" height="20"/>
-        <image name="photo_edit_cancel" width="20" height="20"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
+        <image name="iconSelect" width="24" height="24"/>
     </resources>
 </document>
