--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Bars/Navbar/PhotoEditNavbar.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Bars/Navbar/PhotoEditNavbar.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +20,7 @@
                         <constraint firstAttribute="height" constant="44" id="4oK-Zj-MJb"/>
                         <constraint firstAttribute="width" secondItem="7X9-5e-0ll" secondAttribute="height" multiplier="1:1" id="ccp-Ev-S0t"/>
                     </constraints>
-                    <state key="normal" image="photo_edit_cancel"/>
+                    <state key="normal" image="iconCancelBorder"/>
                     <connections>
                         <action selector="onClose:" destination="k01-WW-6iS" eventType="touchUpInside" id="65r-kI-g5p"/>
                     </connections>
@@ -57,7 +57,7 @@
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="KJb-eu-Vks"/>
                             </constraints>
-                            <state key="normal" image="photo_edit_3dots"/>
+                            <state key="normal" image="iconKebabBorder"/>
                             <connections>
                                 <action selector="onMore:" destination="k01-WW-6iS" eventType="touchUpInside" id="Vzq-5M-yg4"/>
                             </connections>
@@ -89,7 +89,7 @@
     </objects>
     <resources>
         <image name="ShareButtonIcon" width="22" height="22"/>
-        <image name="photo_edit_3dots" width="20" height="20"/>
-        <image name="photo_edit_cancel" width="20" height="20"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
+        <image name="iconKebabBorder" width="24" height="24"/>
     </resources>
 </document>
