--- a/Depo/Depo/Presentation/UserStories/OverlaySticker/OverlayStickerViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/OverlaySticker/OverlayStickerViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -38,7 +38,7 @@
                                 <constraint firstAttribute="width" secondItem="yvQ-VH-rwL" secondAttribute="height" multiplier="1:1" id="6ST-hy-XCG"/>
                                 <constraint firstAttribute="height" constant="44" id="crX-SJ-L9y"/>
                             </constraints>
-                            <state key="normal" image="photo_edit_cancel"/>
+                            <state key="normal" image="iconCancelBorder"/>
                             <connections>
                                 <action selector="onClose:" destination="Tnf-Yg-CVd" eventType="touchUpInside" id="nmL-qq-83K"/>
                             </connections>
@@ -120,7 +120,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="exO-WZ-6eR" secondAttribute="height" multiplier="1:1" id="rX5-PA-edj"/>
                                             </constraints>
-                                            <state key="normal" image="photo_edit_apply"/>
+                                            <state key="normal" image="iconSelect"/>
                                             <connections>
                                                 <action selector="onApply:" destination="iVs-YP-6iP" eventType="touchUpInside" id="ymh-A4-ega"/>
                                             </connections>
@@ -130,7 +130,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="20l-zm-DEI" secondAttribute="height" multiplier="1:1" id="63g-1H-9Iv"/>
                                             </constraints>
-                                            <state key="normal" image="photo_edit_cancel"/>
+                                            <state key="normal" image="iconCancelBorder"/>
                                             <connections>
                                                 <action selector="onCancel:" destination="iVs-YP-6iP" eventType="touchUpInside" id="IFz-h7-xch"/>
                                             </connections>
@@ -209,8 +209,8 @@
         </view>
     </objects>
     <resources>
-        <image name="photo_edit_apply" width="20" height="20"/>
-        <image name="photo_edit_cancel" width="20" height="20"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
+        <image name="iconSelect" width="24" height="24"/>
         <image name="undo" width="18" height="13"/>
     </resources>
 </document>
