--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouTableViewCell.xib
@@ -38,9 +38,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCN-qg-Rwm">
-                                <rect key="frame" x="287" y="4.5" width="67" height="31"/>
+                                <rect key="frame" x="308" y="5" width="46" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
                                     <action selector="seeAllButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="lgw-cy-KFf"/>
                                 </connections>
