--- a/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/PeopleCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/FileInfo/View/Subviews/People/PeopleCollectionViewCell.xib
@@ -35,7 +35,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHD-Iq-rwd">
-                        <rect key="frame" x="0.0" y="78" width="74" height="0.0"/>
+                        <rect key="frame" x="0.0" y="76" width="74" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -46,8 +46,8 @@
             <constraints>
                 <constraint firstItem="yxa-2Z-6aZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="4" id="GE7-1d-JtX"/>
                 <constraint firstAttribute="trailing" secondItem="yxa-2Z-6aZ" secondAttribute="trailing" constant="4" id="HVT-kP-ZJ5"/>
-                <constraint firstItem="wHD-Iq-rwd" firstAttribute="top" secondItem="yxa-2Z-6aZ" secondAttribute="bottom" constant="4" id="OlA-17-Mgv"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wHD-Iq-rwd" secondAttribute="bottom" id="XBk-i5-zFD"/>
+                <constraint firstItem="wHD-Iq-rwd" firstAttribute="top" secondItem="yxa-2Z-6aZ" secondAttribute="bottom" constant="2" id="OlA-17-Mgv"/>
+                <constraint firstAttribute="bottom" secondItem="wHD-Iq-rwd" secondAttribute="bottom" constant="2" id="XBk-i5-zFD"/>
                 <constraint firstItem="wHD-Iq-rwd" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xL4-2o-03J"/>
                 <constraint firstItem="yxa-2Z-6aZ" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="xxa-Hf-cDF"/>
                 <constraint firstAttribute="trailing" secondItem="wHD-Iq-rwd" secondAttribute="trailing" id="zD8-ep-Ke9"/>
