--- a/Depo/Depo/Presentation/UserStories/Others/AlertFilesActionsSheet/View/AlertFilesCancelView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/AlertFilesActionsSheet/View/AlertFilesCancelView.xib
@@ -15,14 +15,14 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-IQ-e1c" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-IQ-e1c" customClass="WhiteButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="16" y="12" width="382" height="45"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="cbX-i5-XRb"/>
                         <constraint firstAttribute="width" constant="382" id="z0f-lI-C55"/>
                     </constraints>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="z0f-lI-C55"/>
