--- a/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Settings/Header/SettingFooterView.xib
@@ -17,7 +17,7 @@
                 <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PbB-FE-kg4">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="190"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX3-1e-3qp">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oX3-1e-3qp" customClass="WhiteButton" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="28" y="133" width="358" height="45"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="ift-3Q-WJX"/>
@@ -303,7 +303,7 @@
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="separator">
-            <color red="0.92156862745098034" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.92199999094009399" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
