--- a/Depo/Depo/Presentation/UserStories/Start/TwoFactorAuthentication/TwoFactorAuthenticationViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/TwoFactorAuthentication/TwoFactorAuthenticationViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -53,25 +53,25 @@
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We detected an unusual login attempt" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="WNf-eD-Chw">
-                                    <rect key="frame" x="33" y="37" width="309" height="82"/>
+                                    <rect key="frame" x="33" y="37" width="309" height="75"/>
                                     <fontDescription key="fontDescription" name="TurkcellSatura" family="Turkcell Satura" pointSize="35"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To secure your account and login safely, we’ll send you a security code to veriy your identity." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yIj-7j-Nxa">
-                                    <rect key="frame" x="33" y="156" width="309" height="30"/>
+                                    <rect key="frame" x="33" y="149" width="309" height="30"/>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaMed" family="TurkcellSaturaMed" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send the security code:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjs-RZ-630">
-                                    <rect key="frame" x="21" y="227" width="333" height="17"/>
+                                    <rect key="frame" x="21" y="220" width="333" height="17"/>
                                     <fontDescription key="fontDescription" name="TurkcellSaturaBol" family="TurkcellSaturaBol" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UEW-bl-lO2">
-                                    <rect key="frame" x="16" y="247" width="359" height="1"/>
+                                    <rect key="frame" x="16" y="240" width="359" height="1"/>
                                     <viewLayoutGuide key="safeArea" id="4kF-SL-6Px"/>
                                     <color key="backgroundColor" name="whiteColor"/>
                                     <constraints>
@@ -79,15 +79,15 @@
                                     </constraints>
                                 </view>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="128" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="26" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Yra-nx-O4M" customClass="ResizableTableView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="248" width="375" height="128"/>
+                                    <rect key="frame" x="0.0" y="241" width="375" height="128"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                     <connections>
                                         <outlet property="dataSource" destination="-1" id="0tB-eC-E0P"/>
                                         <outlet property="delegate" destination="-1" id="shh-Mx-GFP"/>
                                     </connections>
                                 </tableView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m5f-k5-CES" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="84.5" y="395" width="206" height="44"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m5f-k5-CES" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
+                                    <rect key="frame" x="84.5" y="388" width="206" height="44"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="44" id="ikw-qu-pBx"/>
                                         <constraint firstAttribute="width" constant="206" id="o93-dd-Alj"/>
