--- a/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/PublicSharedItemsActionView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/SaveToMyLifebox/View/SubViews/PublicSharedItemsActionView.xib
@@ -20,18 +20,18 @@
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="aYe-5j-zsr">
                             <rect key="frame" x="30" y="0.0" width="373" height="187"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="s62-wf-mzj">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="s62-wf-mzj" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="373" height="93.5"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain"/>
                                     <connections>
                                         <action selector="saveToMyLifeboxButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="hYe-5o-QDK"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-0h-oeO">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="Lyl-0h-oeO" customClass="WhiteButton" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="93.5" width="373" height="93.5"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain"/>
                                     <connections>
                                         <action selector="downloadButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="RxZ-rv-Fmr"/>
                                     </connections>
