--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/AutoSyncViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/AutoSyncViewController.xib
@@ -26,13 +26,10 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuY-4m-Vk6" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="59" y="597" width="257" height="54"/>
+                    <rect key="frame" x="28" y="597" width="319" height="54"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="54" id="N31-4K-tau">
                             <variation key="widthClass=regular" constant="64"/>
-                        </constraint>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="257" id="sJS-li-Jit">
-                            <variation key="widthClass=regular" constant="332"/>
                         </constraint>
                     </constraints>
                     <state key="normal" title="Button"/>
@@ -48,8 +45,10 @@
                 <constraint firstItem="AjX-a0-H7G" firstAttribute="trailing" secondItem="0B0-De-1Rs" secondAttribute="trailing" id="Lte-ag-1eP"/>
                 <constraint firstItem="AjX-a0-H7G" firstAttribute="top" secondItem="Pva-tI-ifo" secondAttribute="top" id="OaD-I0-PhM"/>
                 <constraint firstItem="0B0-De-1Rs" firstAttribute="bottom" secondItem="GuY-4m-Vk6" secondAttribute="bottom" constant="16" id="SCw-2f-v2F"/>
+                <constraint firstItem="GuY-4m-Vk6" firstAttribute="leading" secondItem="0B0-De-1Rs" secondAttribute="leading" constant="28" id="UZs-SH-TMD"/>
                 <constraint firstItem="AjX-a0-H7G" firstAttribute="leading" secondItem="0B0-De-1Rs" secondAttribute="leading" id="cXB-Mn-FsP"/>
                 <constraint firstItem="GuY-4m-Vk6" firstAttribute="centerX" secondItem="Pva-tI-ifo" secondAttribute="centerX" id="fRf-cI-Iga"/>
+                <constraint firstItem="0B0-De-1Rs" firstAttribute="trailing" secondItem="GuY-4m-Vk6" secondAttribute="trailing" constant="28" id="iyV-qQ-j0d"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
