--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncAlbumTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncAlbumTableViewCell.xib
@@ -23,7 +23,7 @@
                             <constraint firstAttribute="width" secondItem="Qpp-QE-eph" secondAttribute="height" multiplier="1:1" id="0tC-AZ-gAw"/>
                             <constraint firstAttribute="height" constant="21" id="fUZ-Gl-Kfp"/>
                         </constraints>
-                        <state key="normal" image="checkBoxNotSelected"/>
+                        <state key="normal" image="iconSelectEmpty"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bj-vv-7cF">
                         <rect key="frame" x="53" y="0.0" width="259" height="44"/>
@@ -67,6 +67,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="checkBoxNotSelected" width="18" height="18"/>
+        <image name="iconSelectEmpty" width="24" height="24"/>
     </resources>
 </document>
