--- a/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Login/View/LoginViewController.xib
@@ -120,7 +120,7 @@
                                                         <constraint firstAttribute="width" constant="30" id="n9k-EG-7ih"/>
                                                     </constraints>
                                                     <state key="normal" image="iconSelectCheck"/>
-                                                    <state key="selected" image="checkboxSelected"/>
+                                                    <state key="selected" image="iconSelectCheck"/>
                                                     <connections>
                                                         <action selector="onRememberMeTap:" destination="-1" eventType="touchUpInside" id="gan-Xb-wfe"/>
                                                     </connections>
@@ -199,7 +199,6 @@
         </view>
     </objects>
     <resources>
-        <image name="checkboxSelected" width="26" height="26"/>
         <image name="iconArrowDownActive" width="24" height="24"/>
         <image name="iconSelectCheck" width="24" height="24"/>
         <namedColor name="primaryBackground">
