--- a/Depo/Depo/Presentation/UserStories/Start/TermsAndServices/View/TermsCheckboxTextView.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/TermsAndServices/View/TermsCheckboxTextView.xib
@@ -35,8 +35,8 @@
                         <constraint firstAttribute="height" constant="24" id="4uz-jZ-0d0"/>
                         <constraint firstAttribute="width" constant="24" id="SJ4-Lb-PNw"/>
                     </constraints>
-                    <state key="normal" image="checkBoxNotSelected"/>
-                    <state key="selected" image="checkboxSelected"/>
+                    <state key="normal" image="iconSelectEmpty"/>
+                    <state key="selected" image="iconSelectEmpty"/>
                     <connections>
                         <action selector="checkBoxAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="T6A-mK-Hxx"/>
                     </connections>
@@ -68,8 +68,7 @@
         </view>
     </objects>
     <resources>
-        <image name="checkBoxNotSelected" width="18" height="18"/>
-        <image name="checkboxSelected" width="26" height="26"/>
+        <image name="iconSelectEmpty" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
