LB-1880 is completed

--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/AutoSyncViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/AutoSyncViewController.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,9 +22,9 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AjX-a0-H7G">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="AjX-a0-H7G">
+                    <rect key="frame" x="8" y="0.0" width="359" height="667"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuY-4m-Vk6" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="28" y="597" width="319" height="54"/>
@@ -42,11 +43,11 @@
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="AjX-a0-H7G" secondAttribute="bottom" id="8BU-rK-Vg4"/>
-                <constraint firstItem="AjX-a0-H7G" firstAttribute="trailing" secondItem="0B0-De-1Rs" secondAttribute="trailing" id="Lte-ag-1eP"/>
-                <constraint firstItem="AjX-a0-H7G" firstAttribute="top" secondItem="Pva-tI-ifo" secondAttribute="top" id="OaD-I0-PhM"/>
+                <constraint firstAttribute="trailing" secondItem="AjX-a0-H7G" secondAttribute="trailing" constant="8" id="Lte-ag-1eP"/>
+                <constraint firstItem="AjX-a0-H7G" firstAttribute="top" secondItem="0B0-De-1Rs" secondAttribute="top" id="OaD-I0-PhM"/>
                 <constraint firstItem="0B0-De-1Rs" firstAttribute="bottom" secondItem="GuY-4m-Vk6" secondAttribute="bottom" constant="16" id="SCw-2f-v2F"/>
                 <constraint firstItem="GuY-4m-Vk6" firstAttribute="leading" secondItem="0B0-De-1Rs" secondAttribute="leading" constant="28" id="UZs-SH-TMD"/>
-                <constraint firstItem="AjX-a0-H7G" firstAttribute="leading" secondItem="0B0-De-1Rs" secondAttribute="leading" id="cXB-Mn-FsP"/>
+                <constraint firstItem="AjX-a0-H7G" firstAttribute="leading" secondItem="Pva-tI-ifo" secondAttribute="leading" constant="8" id="cXB-Mn-FsP"/>
                 <constraint firstItem="GuY-4m-Vk6" firstAttribute="centerX" secondItem="Pva-tI-ifo" secondAttribute="centerX" id="fRf-cI-Iga"/>
                 <constraint firstItem="0B0-De-1Rs" firstAttribute="trailing" secondItem="GuY-4m-Vk6" secondAttribute="trailing" constant="28" id="iyV-qQ-j0d"/>
             </constraints>
@@ -59,5 +60,8 @@
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
