--- a/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncHeaderTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/AutoSync/View/SubViews/AutoSyncHeaderTableViewCell.xib
@@ -48,7 +48,7 @@
                                         <rect key="frame" x="267" y="18" width="13" height="8"/>
                                     </imageView>
                                 </subviews>
-                                <color key="backgroundColor" name="primaryBackground"/>
+                                <color key="backgroundColor" name="secondaryBackground"/>
                                 <constraints>
                                     <constraint firstItem="gUC-Ix-fdq" firstAttribute="centerY" secondItem="7HM-Vn-sml" secondAttribute="centerY" id="0Hv-F1-p3R"/>
                                     <constraint firstItem="I9V-oc-mqR" firstAttribute="centerY" secondItem="7HM-Vn-sml" secondAttribute="centerY" id="2nq-rp-wIu"/>
@@ -68,19 +68,8 @@
                             </label>
                         </subviews>
                     </stackView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vNu-jG-QJr" userLabel="separator">
-                        <rect key="frame" x="16" y="0.0" width="288" height="1"/>
-                        <viewLayoutGuide key="safeArea" id="DHF-Pq-yGH"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="ded-ad-e90"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="vNu-jG-QJr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="11R-xr-Mxj"/>
-                    <constraint firstAttribute="trailing" secondItem="vNu-jG-QJr" secondAttribute="trailing" constant="16" id="Dbx-VX-xOY"/>
-                    <constraint firstItem="vNu-jG-QJr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="LQ2-lX-6fC"/>
                     <constraint firstItem="C33-Ac-Jn7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="QIT-iS-Vfk"/>
                     <constraint firstAttribute="bottom" secondItem="C33-Ac-Jn7" secondAttribute="bottom" constant="4" id="VPO-rF-CYs"/>
                     <constraint firstAttribute="trailing" secondItem="C33-Ac-Jn7" secondAttribute="trailing" constant="20" id="kEq-ss-Hr2"/>
@@ -92,7 +81,6 @@
                 <outlet property="descriptionLabel" destination="g1t-cv-Zis" id="F33-1R-Jfz"/>
                 <outlet property="dropDownArrow" destination="I9V-oc-mqR" id="YPN-lh-KBt"/>
                 <outlet property="optionLabel" destination="gUC-Ix-fdq" id="B50-HP-Jad"/>
-                <outlet property="separatorView" destination="vNu-jG-QJr" id="kN3-RM-1s7"/>
                 <outlet property="titleLabel" destination="hjC-Gv-rOm" id="Vt1-7q-CBL"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="127.90178571428571"/>
@@ -100,7 +88,7 @@
     </objects>
     <resources>
         <image name="downArrow" width="13" height="8"/>
-        <namedColor name="primaryBackground">
+        <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
