--- a/Depo/Depo/Presentation/UserStories/Settings/PeriodicContactSync/View/Subviews/PeriodicContactSyncSettingsTableViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/PeriodicContactSync/View/Subviews/PeriodicContactSyncSettingsTableViewCell.xib
@@ -40,11 +40,11 @@
                                             <action selector="buttonTapped" destination="ifI-JG-lGf" eventType="touchUpInside" id="Dsq-nd-4uZ"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="DjW-TS-eAX">
-                                        <rect key="frame" x="242.5" y="20" width="16" height="16"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconCheckBlue" translatesAutoresizingMaskIntoConstraints="NO" id="DjW-TS-eAX">
+                                        <rect key="frame" x="238.5" y="16" width="24" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="16" id="20U-i8-ftb"/>
-                                            <constraint firstAttribute="width" constant="16" id="mdm-wH-GOC"/>
+                                            <constraint firstAttribute="height" constant="24" id="20U-i8-ftb"/>
+                                            <constraint firstAttribute="width" constant="24" id="mdm-wH-GOC"/>
                                         </constraints>
                                     </imageView>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vlD-lt-K55">
@@ -85,11 +85,11 @@
                                             <action selector="buttonTapped" destination="U1g-k2-KUQ" eventType="touchUpInside" id="mib-DM-SIi"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="dDd-y4-3DP">
-                                        <rect key="frame" x="242.5" y="20" width="16" height="16"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconCheckBlue" translatesAutoresizingMaskIntoConstraints="NO" id="dDd-y4-3DP">
+                                        <rect key="frame" x="238.5" y="16" width="24" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="16" id="BtG-Cw-Ooh"/>
-                                            <constraint firstAttribute="width" constant="16" id="dfm-Z1-Ary"/>
+                                            <constraint firstAttribute="height" constant="24" id="BtG-Cw-Ooh"/>
+                                            <constraint firstAttribute="width" constant="24" id="dfm-Z1-Ary"/>
                                         </constraints>
                                     </imageView>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aa2-1F-JSl">
@@ -130,11 +130,11 @@
                                             <action selector="buttonTapped" destination="GvU-yh-jdJ" eventType="touchUpInside" id="Dje-vG-oVu"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="hxK-WM-zMk">
-                                        <rect key="frame" x="242.5" y="20.5" width="16" height="16"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconCheckBlue" translatesAutoresizingMaskIntoConstraints="NO" id="hxK-WM-zMk">
+                                        <rect key="frame" x="238.5" y="16.5" width="24" height="24"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="16" id="2ig-fM-e99"/>
-                                            <constraint firstAttribute="height" constant="16" id="iqc-RS-QyS"/>
+                                            <constraint firstAttribute="width" constant="24" id="2ig-fM-e99"/>
+                                            <constraint firstAttribute="height" constant="24" id="iqc-RS-QyS"/>
                                         </constraints>
                                     </imageView>
                                     <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ftL-7M-g0o">
@@ -169,7 +169,7 @@
                             <constraint firstItem="hxK-WM-zMk" firstAttribute="trailing" secondItem="dDd-y4-3DP" secondAttribute="trailing" id="nuZ-0I-p54"/>
                         </constraints>
                     </stackView>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aOe-fe-AKA" customClass="CustomSwitch" customModule="Billo" customModuleProvider="target">
+                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aOe-fe-AKA" customClass="GradientSwitch" customModule="Billo" customModuleProvider="target">
                         <rect key="frame" x="254" y="5" width="51" height="31"/>
                         <color key="onTintColor" name="tint"/>
                         <connections>
@@ -230,12 +230,12 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="checkmark" width="16" height="12"/>
+        <image name="iconCheckBlue" width="24" height="24"/>
         <namedColor name="darkBorder">
             <color red="0.59200000762939453" green="0.59200000762939453" blue="0.59200000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="tint">
-            <color red="0.0" green="0.4823529411764706" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.48199999332427979" blue="0.67100000381469727" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
